--- a/static/assets/css/screen.mind845.css
+++ b/static/assets/css/screen.mind845.css
@@ -897,7 +897,7 @@ h6 {
     color: var(--text-color-dark);
     font-weight: 400;
     line-height: 1.3;
-    margin-bottom: 1rem
+    /*margin-bottom: 1rem*/
 }
 
 .h5 {
@@ -3535,7 +3535,7 @@ form[data-members-form] .button-loader, form[data-members-form] .message-error, 
     background-color: var(--light-bg-color);
     height: 100%;
     padding: 1.5rem;
-    border-radius: 3px
+    border-radius: 17px;
 }
 
 .item-card .tag-name {
