--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
     <meta property="og:title" content="Husan.I">
     <meta property="og:description"
           content="A backend programmer from Uzbekistan who wants to change himself and never stops striving. This is my personal blog.">
-    <meta property="og:url" content="https://husanibragimov.uz/">
+{#    <meta property="og:url" content="https://husanibragimov.uz/">#}
     <meta property="article:publisher" content="https://www.facebook.com/gbjsolution">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Husan.I">
