--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en" data-header="sticky" data-theme="light">
 
-<meta http-equiv="content-type" content="text/html;charset=utf-8"/><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=utf-8"/>
 
 <head>
     <meta charset="UTF-8">
@@ -34,21 +34,17 @@
     <meta property="og:description"
           content="A backend programmer from Uzbekistan who wants to change himself and never stops striving. This is my personal blog.">
 {#    <meta property="og:url" content="https://husanibragimov.uz/">#}
-    <meta property="article:publisher" content="https://www.facebook.com/gbjsolution">
+    <meta property="article:publisher" content="https://www.facebook.com/husanibragimov.uz">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Husan.I">
     <meta name="twitter:description"
           content="A backend programmer from Uzbekistan who wants to change himself and never stops striving. This is my personal blog.">
-    <meta name="twitter:url" content="https://husanibragimov.uz/">
-{#    <meta name="twitter:image" content="https://husanibragimov.uz/content/images/2020/04/saima-gul-headshot.jpg">#}
     <meta name="twitter:site" content="@husanibragimov_">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="1320">
 
     <meta name="generator" content="Ghost 5.74">
     <link rel="alternate" type="application/rss+xml" title="Husan.I" href="{% url 'blog:home' %}">
-    <script defer src="https://cdn.jsdelivr.net/ghost/portal@~2.36/umd/portal.min.js" data-i18n="false"
-            data-ghost="https://husanibragimov.uz/" data-key="46b9130d3e409da72d2eaffd28"></script>
     <style id="gh-members-styles">
         .gh-post-upgrade-cta-content,
         .gh-post-upgrade-cta {
@@ -115,16 +111,16 @@
             opacity: 0.92;
         }
     </style>
-    <script async src="https://js.stripe.com/v3/"></script>
-    <script defer src="https://cdn.jsdelivr.net/ghost/sodo-search@~1.1/umd/sodo-search.min.js"
-            data-key="46b9130d3e409da72d2eaffd28"
-            data-styles="https://cdn.jsdelivr.net/ghost/sodo-search@~1.1/umd/main.css"
-            data-sodo-search="https://husanibragimov.uz/" crossorigin="anonymous"></script>
+{#    <script async src="https://js.stripe.com/v3/"></script>#}
+{#    <script defer src="https://cdn.jsdelivr.net/ghost/sodo-search@~1.1/umd/sodo-search.min.js"#}
+{#            data-key="46b9130d3e409da72d2eaffd28"#}
+{#            data-styles="https://cdn.jsdelivr.net/ghost/sodo-search@~1.1/umd/main.css"#}
+{#            data-sodo-search="https://husanibragimov.uz/" crossorigin="anonymous"></script>#}
 
     <link href="{% url 'blog:home' %}" rel="webmention">
     <script defer src="{% static '' %}public/cards.mind845.js?v=3c9bb59ff1"></script>
-    <link rel="stylesheet" type="text/css" href="{% static '' %}public/cards.mind845.css?v=3c9bb59ff1">
-    <script defer src="{% static '' %}public/member-attribution.mind845.js?v=3c9bb59ff1"></script>
+{#    <link rel="stylesheet" type="text/css" href="{% static '' %}public/cards.mind845.css?v=3c9bb59ff1">#}
+{#    <script defer src="{% static '' %}public/member-attribution.mind845.js?v=3c9bb59ff1"></script>#}
     <style>
         :root {
             --ghost-accent-color: #fb873c;
