--- a/templates/base.html
+++ b/templates/base.html
@@ -203,7 +203,7 @@
                         <li class="nav-item {% if request.resolver_match.url_name == 'blog_list' %}nav-item-current{% endif %}">
                             <a href="{% url 'blog:blog_list' %}">Blogs</a></li>
                         <li class="nav-item {% if request.resolver_match.url_name == 'contact' %}nav-item-current{% endif %}">
-                            <a href="{% url 'blog:contact' %}">Contact</a></li>
+                            <a href="{% url 'blog:contact' %}">More</a></li>
                     </ul>
                 </nav>
             </div>
