--- a/templates/blog/blog_detail.html
+++ b/templates/blog/blog_detail.html
@@ -40,7 +40,7 @@
                                     <!-- facebook -->
                                     <li>
                                         <a class="facebook"
-                                           href="https://www.facebook.com/sharer/sharer.php?u=https://saima.gbjsolution.com/it-is-during-our-darkest-moments-that-we-must-focus-to-see-the-light/"
+                                           href="https://www.facebook.com/sharer/sharer.php?u={{ request.build_absolute_uri }}"
                                            onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;"
                                            title="Share on Facebook">
                                             <svg xmlns="http://www.w3.org/2000/svg"
@@ -52,7 +52,7 @@
                                     <!-- twitter -->
                                     <li>
                                         <a class="twitter"
-                                           href="https://twitter.com/share?text=It%20is%20during%20our%20darkest%20moments%20that%20we%20must%20focus%20to%20see%20the%20light&amp;url=https://saima.gbjsolution.com/it-is-during-our-darkest-moments-that-we-must-focus-to-see-the-light/"
+                                           href="https://twitter.com/share?text={{ object.title }}&amp;url={{ request.build_absolute_uri }}"
                                            onclick="window.open(this.href, 'twitter-share', 'width=580,height=296');return false;"
                                            title="Share on Twitter">
                                             <svg xmlns="http://www.w3.org/2000/svg"
@@ -64,7 +64,7 @@
                                     <!-- linkedin -->
                                     <li>
                                         <a class="linkedin"
-                                           href="http://www.linkedin.com/shareArticle?mini=true&amp;url=https://saima.gbjsolution.com/it-is-during-our-darkest-moments-that-we-must-focus-to-see-the-light/&amp;title=It%20is%20during%20our%20darkest%20moments%20that%20we%20must%20focus%20to%20see%20the%20light"
+                                           href="http://www.linkedin.com/shareArticle?mini=true&amp;url={{ request.build_absolute_uri }}&amp;title={{ object.title }}"
                                            onclick="window.open(this.href, 'linkedin-share', 'width=580,height=296');return false;"
                                            title="Share on Linkedin">
                                             <svg xmlns="http://www.w3.org/2000/svg"
@@ -76,7 +76,7 @@
                                     <!-- pinterest -->
                                     <li>
                                         <a class="pinterest"
-                                           href="http://pinterest.com/pin/create/button/?url=https://saima.gbjsolution.com/it-is-during-our-darkest-moments-that-we-must-focus-to-see-the-light/&amp;description=It%20is%20during%20our%20darkest%20moments%20that%20we%20must%20focus%20to%20see%20the%20light"
+                                           href="http://pinterest.com/pin/create/button/?url={{ request.build_absolute_uri }}&amp;description={{ object.title }}"
                                            onclick="window.open(this.href, 'linkedin-share', 'width=580,height=296');return false;"
                                            title="Share on Pinterest">
                                             <svg xmlns="http://www.w3.org/2000/svg"
@@ -87,11 +87,12 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a class="link js-copy-link" href="#" onclick="return false;"
+                                        <a class="link js-copy-link" href="{{ request.build_absolute_uri }}"
+                                           onclick="return false;"
                                            data-clipboard-text="{{ request.build_absolute_uri }}"
                                            title="Copy the permalink" rel="noopener">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                                    viewBox="0 0 24 24">
+                                                 viewBox="0 0 24 24">
                                                 <path d="M6.188 8.719c.439-.439.926-.801 1.444-1.087 2.887-1.591 6.589-.745 8.445 2.069l-2.246 2.245c-.644-1.469-2.243-2.305-3.834-1.949-.599.134-1.168.433-1.633.898l-4.304 4.306c-1.307 1.307-1.307 3.433 0 4.74 1.307 1.307 3.433 1.307 4.74 0l1.327-1.327c1.207.479 2.501.67 3.779.575l-2.929 2.929c-2.511 2.511-6.582 2.511-9.093 0s-2.511-6.582 0-9.093l4.304-4.306zm6.836-6.836l-2.929 2.929c1.277-.096 2.572.096 3.779.574l1.326-1.326c1.307-1.307 3.433-1.307 4.74 0 1.307 1.307 1.307 3.433 0 4.74l-4.305 4.305c-1.311 1.311-3.44 1.3-4.74 0-.303-.303-.564-.68-.727-1.051l-2.246 2.245c.236.358.481.667.796.982.812.812 1.846 1.417 3.036 1.704 1.542.371 3.194.166 4.613-.617.518-.286 1.005-.648 1.444-1.087l4.304-4.305c2.512-2.511 2.512-6.582.001-9.093-2.511-2.51-6.581-2.51-9.092 0z"></path>
                                             </svg>
                                         </a>
@@ -101,22 +102,22 @@
                                     <span>The link has been Copied to clipboard!</span>
                                 </div>
                             </div>
-                            <div class="about-author flex">
-                                <div class="avatar-wrap">
-                                    <a href="../author/surabhi/index.html" title="Surabhi Gupta">
-                                        <img class="lazy avatar"
-                                            data-src="{% static '' %}content/images/size/w150/2020/04/joseph-kellner-EH6-hOhDqpA-unsplash.jpg"
-                                            alt="Surabhi Gupta" class="avatar"></a>
-                                </div>
-                                <div class="author-info">
-                                    <h3 class="name h5">Written by <a href="#">Surabhi
-                                        Gupta</a></h3>
-                                    <div class="bio">
-                                        Front end developer by profession. Digital painting enthusiast. She also
-                                        involved in various social activity. Fan of winter and snow.
-                                    </div>
-                                </div>
-                            </div>
+{#                            <div class="about-author flex">#}
+{#                                <div class="avatar-wrap">#}
+{#                                    <a href="#" title="Husan.I">#}
+{#                                        <img class="lazy avatar"#}
+{#                                             data-src="{% static '' %}content/images/size/w150/2020/04/joseph-kellner-EH6-hOhDqpA-unsplash.jpg"#}
+{#                                             alt="Surabhi Gupta" class="avatar"></a>#}
+{#                                </div>#}
+{#                                <div class="author-info">#}
+{#                                    <h3 class="name h5">Written by <a href="#">Surabhi#}
+{#                                        Gupta</a></h3>#}
+{#                                    <div class="bio">#}
+{#                                        Front end developer by profession. Digital painting enthusiast. She also#}
+{#                                        involved in various social activity. Fan of winter and snow.#}
+{#                                    </div>#}
+{#                                </div>#}
+{#                            </div>#}
                         </div>
                     </div>
                 </div>
@@ -124,60 +125,65 @@
             <div class="prev-nex-wrap">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-6">
-                            <div class="post prev-post">
-                                <a href="#"
-                                   class="flex">
-                                    <div class="featured-image">
-                                        <img class="lazy"
-                                             data-src="/content/images/size/w300/2020/04/jonas-verstuyft-jXwZOSXC7KA-unsplash--1-.jpg"
-                                             alt="Self-observation is the first step of inner unfolding">
-                                    </div>
-                                    <div class="content-wrap">
-                                        <div class="nav-text">Newer post</div>
-                                        <h4 class="title h5">Self-observation is the first step of inner unfolding
-                                        </h4>
-                                    </div>
-                                </a>
+                        {% if previous_post %}
+                            <div class="col-md-6">
+                                <div class="post prev-post">
+                                    <a href="{{ previous_post.get_absolute_url }}" class="flex">
+                                        <div class="featured-image">
+                                            <img class="lazy" data-src="
+                                                    {% if previous_post.featured_image %}{{ previous_post.get_image_url }}{% else %}https://via.placeholder.com/600x400.png?text=No+Image{% endif %}"
+                                                 alt="{{ previous_post.title }}">
+                                        </div>
+                                        <div class="content-wrap">
+                                            <div class="nav-text">Newer post</div>
+                                            <h4 class="title h5">{{ previous_post.title }}</h4>
+                                        </div>
+                                    </a>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="post next-post">
-                                <a href="#"
-                                   class="flex">
-                                    <div class="featured-image">
-                                        <img class="lazy"
-                                             data-src="/content/images/size/w300/2020/04/hans-reniers-lQGJCMY5qcM-unsplash.jpg"
-                                             alt="Bangladesh has developed plastic alternative using jute">
-                                    </div>
-                                    <div class="content-wrap">
-                                        <div class="nav-text">Older post</div>
-                                        <h4 class="title h5">Bangladesh has developed plastic alternative using jute
-                                        </h4>
-                                    </div>
-                                </a>
+                        {% else %}
+                            <div class="col-md-6"></div>
+                        {% endif %}
+                        {% if next_post %}
+                            <div class="col-md-6">
+                                <div class="post next-post">
+                                    <a href="{% if next_post.get_absolute_url %}
+                                        {{ next_post.get_absolute_url }}{% else %}https://via.placeholder.com/600x400.png?text=No+Image{% endif %}"
+                                       class="flex">
+                                        <div class="featured-image">
+                                            <img class="lazy" data-src="{{ next_post.get_image_url }}"
+                                                 alt="{{ next_post.title }}">
+                                        </div>
+                                        <div class="content-wrap">
+                                            <div class="nav-text">Older post</div>
+                                            <h4 class="title h5">{{ next_post.title }}</h4>
+                                        </div>
+                                    </a>
+                                </div>
                             </div>
-                        </div>
+                        {% else %}
+                            <div class="col-md-6"></div>
+                        {% endif %}
                     </div>
                 </div>
             </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col">
-                        <div class="comment-wrap">
-                            <div class="comment-wrap-inner">
-                                <div class="disqus-comment-wrap"></div>
-                                <script>
-                                    var disqus_shortname = 'saima-ghost-theme';
-                                    var pageUrl = '{{ request.build_absolute_uri }}';
-                                    var pageIdentifier = 'ghost-5dad8432fde4fe4312e1925a';
-                                </script>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
+            {#            <div class="container">#}
+            {#                <div class="row">#}
+            {#                    <div class="col">#}
+            {#                        <div class="comment-wrap">#}
+            {#                            <div class="comment-wrap-inner">#}
+            {#                                <div class="disqus-comment-wrap"></div>#}
+            {#                                <script>#}
+            {#                                    var disqus_shortname = 'saima-ghost-theme';#}
+            {#                                    var pageUrl = '{{ request.build_absolute_uri }}';#}
+            {#                                    var pageIdentifier = 'ghost-5dad8432fde4fe4312e1925a';#}
+            {#                                </script>#}
+            {#                            </div>#}
+            {##}
+            {#                        </div>#}
+            {#                    </div>#}
+            {#                </div>#}
+            {#            </div>#}
         </div>
     </div>
 
