hidden is cancel

--- a/templates/blog/blog_detail.html
+++ b/templates/blog/blog_detail.html
@@ -10,11 +10,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <div class="featured-image-wrap hidden">
-                            <img class="lazy" data-srcset="{% if object.image %}{{ object.image.url }}{% else %}https://via.placeholder.com/800x400.png?text=No+Image{% endif %}"
-                                 data-src="{% if object.image %}{{ object.image.url }}{% else %}https://via.placeholder.com/800x400.png?text=No+Image{% endif %}"
-                                 alt="It is during our darkest moments that we must focus to see the light"/>
-                        </div>
+{#                        <div class="featured-image-wrap">#}
+{#                            <img class="lazy" data-srcset="{% if object.image %}{{ object.image.url }}{% else %}https://via.placeholder.com/800x400.png?text=No+Image{% endif %}"#}
+{#                                 data-src="{% if object.image %}{{ object.image.url }}{% else %}https://via.placeholder.com/800x400.png?text=No+Image{% endif %}"#}
+{#                                 alt="It is during our darkest moments that we must focus to see the light"/>#}
+{#                        </div>#}
                         <div class="post-inner-wrap">
                             <div class="post-info">
                                     <time datetime="{{ object.created_at|date:'Y-m-d' }}">{{ object.created_at|date:'j F, Y' }}</time>
