--- a/templates/index.html
+++ b/templates/index.html
@@ -142,44 +142,43 @@
 								</div>
 							</div>
 							<div class="top_author_image">
-								{% if about_qs.my_images.image %}
-									<img src="{{ about_qs.my_images.image.last.url }}" alt="" />
+								{% if about.my_images.image %}
+									<img src="{{ about.my_images.image.last.url }}" alt="" />
 								{% endif %}
 							</div>
 							<div class="about_title">
-								<h3>{{ request.user.get_full_name }}</h3>
-								<span>{{ about_qs.title }}</span>
+								<h3>{{ user.first_name }} {{ user.last_name }}</h3>
+								<span>{{ about.title }}</span>
 							</div>
 							<div class="about_text">
-								<p>Hi, my name is Adriano Smith and I began using WordPress when it first began. I’ve spent most of my waking hours for the last ten years designing, programming and operating WordPress sites.</p>
-								<p>One of my specialties is taking an idea from scratch and creating a full-fledged platform. I go beyond to produce sites with a unique, outstanding, contemporary look-and-feel. With extensive knowledge of web mechanics, I’m able to optimize complex integrations to require little-to-no maintenance while running on their own for years.</p>
+								<p>{{ about.my_images.description.first }}</p>
 							</div>
 							<div class="tokyo_tm_short_info">
 								<div class="left">
 									<div class="tokyo_tm_info">
 										<ul>
-											<li><span>Birthday:</span><span>01.07.1990</span></li>
-											<li><span>Age:</span><span>32</span></li>
-											<li><span>Address:</span><span>Ave 11, New York, USA</span></li>
-											<li><span>Email:</span><span><a href="{% static '' %}mailto:tokyo@gmail.com">tokyo@gmail.com</a></span></li>
-											<li><span>Phone:</span><span><a href="{% static '' %}tel:+77 022 177 05 05">+77 022 177 05 05</a></span></li>
+											<li><span>Birthday:</span><span>{{ about.birthday|date:"F d, Y" }}</span></li>
+											<li><span>Age:</span><span>about.get_age</span></li>
+											<li><span>Address:</span><span>about.address</span></li>
+											<li><span>Email:</span><span><a href="{% static '' %}mailto:{{ user.email }}">{{ user.email }}</a></span></li>
+											<li><span>Phone:</span><span><a href="{% static '' %}tel:{{ about.phone_number }}">{{ about.phone_number }}</a></span></li>
 										</ul>
 									</div>
 								</div>
 								<div class="right">
 									<div class="tokyo_tm_info">
 										<ul>
-											<li><span>Nationality:</span><span>USA</span></li>
+											<li><span>Nationality:</span><span>Uzbek</span></li>
 											<li><span>Study:</span><span>Univercity of Texas</span></li>
-											<li><span>Degree:</span><span>Master</span></li>
-											<li><span>Interest:</span><span>Playing Football</span></li>
+											<li><span>Degree:</span><span>{{ about.degree }}</span></li>
+											<li><span>Interest:</span><span>{{ about.interest}}</span></li>
 											<li><span>Freelance:</span><span>Available</span></li>
 										</ul>
 									</div>
 								</div>
 							</div>
 							<div class="tokyo_tm_button" data-position="left">
-								<a href="{% static '' %}img/cv/1.jpg" download>
+								<a href="{{ resume.resume.url }}" download>
 									<span>Download CV</span>
 								</a>
 							</div>
